@@ -1,5 +1,7 @@
 2007-02-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/Collector/SNMP.pm: SNMP maps automatic refreshing
+
 	* bin/devdiscover.in: Devdiscover now accepts multiple input files
 
 2007-02-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
